--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,9 @@
-language:javascript
+language: node_js
+branches:
+  only:
+  - modular
+node_js:
+  - "0.10"
+before_script:
+    - npm install -g underscore
+
