--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "test": "test"
   },
   "dependencies": {
-    "underscore": "^1.8.3",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "chai": "^3.2.0",
     "chai-http": "^1.0.0"
-
   },
   "scripts": {
     "test": "mocha"
@@ -25,10 +24,13 @@
     "router",
     "framework"
   ],
-  "author": "Alex Ramsdell" <alexramsdell@gmail.com>,
    "contributors": [{
   "name": "Phillip Son",
   "email": "philson3@gmail.com"
+  },
+  {
+  "name": "Alex Ramsdell",
+  "email": "alexramsdell@gmail.com"
   }],
   "license": "MIT",
   "bugs": {
